--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
       form.displayResult.value=form.displayResult.value+result;
       
       }
+      function ac(){
+        form.displayResult.value = 0;
+      }
       </script>
       <div class="container">
       <form name="form">
@@ -88,7 +91,7 @@
       
       <div class="row">
       <input type="button" name="b0" value="0" onClick="calcNumbers(b0.value)">
-        <input type="button" name="potb" value="." onClick="calcNumbers(potb.value)">
+        <input type="button" name="potb" value="AC" onClick="ac()">
         <input type="button" name="divb" value="÷" onClick="calcNumbers(divb.value)">
         <input type="button" class="red" value="=" onClick="displayResult.value=eval(displayResult.value)">
       </div>
