--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="container">
       <form name="form">
       <div class="display">
-      <input type="text" placeholder="0" name="displayResult" />
+      <input type="text" placeholder="0" name="displayResult" value='1500'/>
       </div>
       <div class="buttons">
         <div class="row">
