--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="chest">
       <div class="chest__inner">
         <div class="chest__face chest__face--front">
-          <h2>COMMUNITY CHEST</h2>
+          <h2>COMMUNITY<br>CHEST</h2>
         </div>
         <div class="chest__face chest__face--back">
           <div class="chest__content">
@@ -55,12 +55,13 @@
 
     <script>
       function calcNumbers(result){
-      form.displayResult.value=form.displayResult.value+result;
-      
+        form.displayResult.value=form.displayResult.value+result;
       }
+
       function ac(){
         form.displayResult.value = 0;
       }
+
       </script>
       <div class="container">
       <form name="form">
