--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       <div class="chance__inner">
         <div class="chance__face chance__face--front">
           <h2>CHANCE</h2>
+          <img src="chance.png" alt="chance">
         </div>
         <div class="chance__face chance__face--back">
           <div class="chance__content">
             <div class="chance__header">
-              <h2>CHANCE</h2>
+              <h2>BUY MORE FOOD THAN YOU NEED</h2>
             </div>
             <div class="chance__body">
-              <h3>ADVANCE TO GO!</h3>
-              <p>Head straight to GO and collect £200</p>
+              <p>Go straight to jail! Not allowed to use the GET OUT OF JAIL FREE Card</p>
             </div>
           </div>
         </div>
@@ -34,15 +34,15 @@
       <div class="chest__inner">
         <div class="chest__face chest__face--front">
           <h2>COMMUNITY<br>CHEST</h2>
+          <img src="community chest.png" alt="chest">
         </div>
         <div class="chest__face chest__face--back">
           <div class="chest__content">
             <div class="chest__header">
-              <h2>COMMUNITY CHEST</h2>
+              <h2>ADVANCE TO GO!</h2>
             </div>
             <div class="chest__body">
-              <h3>GET OUT OF JAIL FREE</h3>
-              <p>This card may be kept until needed</p>
+              <p>Head straight to GO and collect £200</p>
             </div>
           </div>
         </div>
@@ -51,6 +51,7 @@
   </div>
   <script src="main.js"></script>
 
+ 
     <script>
       function calcNumbers(result){
         form.displayResult.value=form.displayResult.value+result;
@@ -61,6 +62,10 @@
       }
 
       </script>
+      <div class="calcset">
+    
+      <h>YOUR MONEY:</h>
+
       <div class="container">
       <form name="form">
       <div class="display">
@@ -98,6 +103,7 @@
       
       </form>
       </div>
+    </div>
 
     <div class="set">
       <div class="dice">
